<resources>

    <!-- GOOGLE MAPS KEY -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB6LKT60C_EPzIXzTo13PFcZKFFABt9q3E</string>

    <!-- DESCRIPTIONS -->
    <string name="colored_background">colored background</string>
    <string name="image_button">image button</string>
    <string name="my_location_drawable">my location drawable</string>

    <!-- BUTTONS-->
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="sos">SOS</string>
    <string name="false_alarm">FALSE ALARM</string>
    <string name="exit">EXIT</string>

    <!-- DIALOG-BUTTONS-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="search_in_my_contacts">Search in my contacts</string>

    <!-- DIALOG MESSAGES -->
    <string name="dialog_send_sms_permission_explanation">Send SMS permission is very important to this feature. You can not use it without permission.</string>
    <string name="dialog_send_sms_permission_denied">This feature requires Send-SMS permission. If you want to use this, please go to the setting and give the permission.</string>
    <string name="dialog_read_contacts_permission_explanation">Read Contacts permission is needed for this feature. You can not pick contact from your address book without this permission.</string>
    <string name="dialog_read_contacts_permission_denied">This feature requires Read Contacts permission. If you want to use this, please go to the setting and give the permission.</string>
    <string name="dialog_location_permission_explanation">Location permission is very important to this feature. You can not use it without permission.</string>
    <string name="dialog_location_services_are_disabled">Your Location-Services are probably disabled. You can not use some features. Please go to settings to enable it.</string>

    <!-- INPUT ERRORS-->
    <string name="empty_phone_number">The phone number can not be empty</string>
    <string name="empty_first_name">The first name can not be empty</string>

    <!-- TEXT VIEWS -->
    <string name="i_slash_n">i/n</string>
    <string name="text_view_divider">_____________________________</string>
    <string name="double_point_symbol">:</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="number_of_intervals">Number of intervals</string>
    <string name="time_of_interval">Time of interval</string>
    <string name="time">TIME</string>
    <string name="interval_time_expired">The time of the interval has expired!</string>
    <string name="sos_signal">SOS signal was sent!</string>
    <string name="restTime">SOS signal will send in</string>

    <!-- HINTS -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>

    <!-- TITLES -->
    <string name="app_name">SaveYourRide</string>
    <string name="title_activity_passive_mode">PassiveMode</string>
    <string name="title_activity_active_mode">activeMode</string>
    <string name="title_passive_tab">Passive</string>
    <string name="title_active_tab">Active</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="title_activity_sos_mode">SosMode</string>
    <string name="title_activity_settings_contacts">Emergency contacts</string>
    <string name="title_activity_settings_main">Settings</string>
    <string name="title_activity_settings_preview_message">Preview</string>
    <string name="title_dialog_location_services">Location services.</string>
    <string name="title_dialog_send_sms_permission">Send-SMS permission is required.</string>
    <string name="title_dialog_read_contacts_permission">Read Contacts permission is required.</string>
    <string name="title_dialog_location_permission">Location permission is required.</string>
    <string name="title_dialog_stop_active_mode">Do you want to stop the Active-Mode?</string>
    <string name="title_dialog_stop_passive_mode">Do you want to stop the Passive-Mode?</string>
    <string name="title_dialog_no_movement_detected">You are not moving for a long time. Is everything OK?</string>
    <string name="title_dialog_accident_guarantee_procedure_interval">All intervals have expired. Is everything OK?</string>
    <string name="title_dialog_accident_guarantee_procedure_no_movement">You do not move for a long time and do not respond to the notifications. Is everything OK?</string>
    <string name="title_dialog_add_emergency_contact">Add emergency contact</string>
    <string name="title_dialog_edit_emergency_contact">Edit emergency contact</string>
    <string name="title_dialog_delete_emergency_contact">Are you sure you want to delete this contact?</string>
    <string name="title_dialog_sos_button">Are you sure you want to send an emergency signal?</string>

    <!-- SHARED_PREFERENCES_KEYS (sp_keys) -->
    <string name="sp_key_last_known_location">lastKnownLocation</string>
    <string name="sp_key_latitude">latitude</string>
    <string name="sp_key_longitude">longitude</string>
    <string name="sp_key_timer_values">timerValues</string>
    <string name="sp_key_number_of_interval">numberOfIntervals</string>
    <string name="sp_key_time_of_interval">timeOfInterval</string>
    <string name="sp_key_saved_contacts">savedContacts</string>
    <string name="sp_key_contacts_json">contactsJSON</string>

    <!-- DEFAULT VALUES FOR GOOGLE-MAP -->
    <string name="default_germany_latitude">51</string>
    <string name="default_germany_longitude">10.4</string>
    <string name="default_germany_zoom">6f</string>
    <string name="default_user_location_zoom">16.5f</string>

    <!-- PERMISSIONS -->
    <string name="permission_required_toast">Location permission is required for this feature.</string>
    <string name="permission_rationale_location">Access to the location service is required for this feature.</string>
    <string name="please_activate_location_services">Please activate location services</string>

    <!-- TOASTS -->
    <string name="send_sms_permission_denied">Send SMS permission is very important to this feature. You can not use it without permission.</string>
    <string name="no_contact_added">You have not added a contact.</string>
    <string name="no_contact_edited">You have not edited a contact.</string>
    <string name="location_permission_denied">Location permission is not granted. Please go to settings and give the permission.</string>

    <!-- ONLY FOR TESTS -->
    <string name="read">READ</string>

    <!-- SETTINGS -->
    <string name="category_title_main_settings">Emergency information</string>
    <string name="category_title_sos_message">SOS-Message</string>

    <string name="title_name">Name</string>
    <string name="title_diseases">Diseases</string>
    <string name="title_allergies">Allergies</string>
    <string name="title_drugs">Drugs</string>
    <string name="title_contacts">Contacts</string>
    <string name="empty_contacts_list">The list of emergency contacts is empty.\nPlease add a new emergency contact.</string>
    <string name="default_contacts_json">[]</string>

    <string name="title_enable_custom_message">Custom Message</string>
    <string name="summary_enable_custom_message">Use custom text as SOS-Message instead of the default message</string>
    <string name="title_custom_message">Custom Message</string>
    <string name="title_accident_time">Accident Time</string>
    <string name="title_preview">Preview</string>
    <string name="title_included_information">Included information</string>

    <!-- keys -->
    <string name="pref_preview_message">pref_preview_message</string>
    <string name="pref_name">pref_name</string>
    <string name="pref_diseases">pref_diseases</string>
    <string name="pref_enable_custom_message">pref_enable_custom_message</string>
    <string name="pref_custom_message">pref_custom_message</string>
    <string name="pref_allergies">pref_allergies</string>
    <string name="pref_drugs">pref_drugs</string>
    <string name="pref_contacts">pref_contacts</string>
    <string name="pref_included_information">pref_included_information</string>

    <!-- preview message -->
    <string name="test_contact">Test Contact</string>

    <!-- message -->
    <string name="greeting">Hello %1$s,</string>
    <string name="sos_message">This is an emergency signal. The app SaveYourRide registered an emergency. %1$s is possible injured. Please try to contact %1$s. So, you can help or know if it is a false alarm or not. If you cannot reach %1$s, please call the official emergency numbers. </string>
    <string name="false_alarm_message">The emergency sigal which was sent before, was a false alarm. Everything is okay. </string>

    <!-- status in Sos mode -->
    <string name="status_sent_sms_not_successful">Not all SOS signals were sent successful!</string>
    <string name="status_sent_sms_successful">All SOS signals were sent successful!</string>

    <string name="status_sent_false_alarm_sms_not_successful">Not all sigals for false alarm were sent successfully!</string>
    <string name="status_sent_false_alarm_sms_successful">All signals for false alarm were sent successfully!</string>

</resources>