<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/Theme.AppCompat.Dialog"
    tools:context=".activities.SettingsContacts">

    <Button
        android:id="@+id/settingsContacts_dialog_searchContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/search_in_my_contacts" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settingsContacts_dialog_firstNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:theme="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settingsContacts_dialog_firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settingsContacts_dialog_lastNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:theme="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settingsContacts_dialog_lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settingsContacts_dialog_phoneNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"

        android:theme="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settingsContacts_dialog_phoneNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
