<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_passive_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PassiveMode">

    <ImageView
        android:id="@+id/passiveMode_myLocationAnimated"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/my_location_animated_circle"
        android:contentDescription="@string/my_location_drawable"
        android:elevation="5dp" />

    <ImageView
        android:id="@+id/passiveMode_myLocationCircle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/my_location_red_circle"
        android:contentDescription="@string/my_location_drawable"
        android:elevation="10dp" />

    <Button
        android:id="@+id/passiveMode_buttonStop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/round_button"
        android:elevation="3dp"
        android:text="@string/stop"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/passiveMode_buttonSos"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_button_red"
        android:elevation="3dp"
        android:text="@string/sos"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <View
        android:id="@+id/passiveModeGradientView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_long_gradient"
        android:elevation="1dp" />

    <fragment
        android:id="@+id/mapInPassiveMode"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:context="com.saveyourride.activities.PassiveMode" />

</RelativeLayout>
